Another fix that covers another use case (in configuration forms)

--- a/frontend/src/app/components/shared/editor/editor.less
+++ b/frontend/src/app/components/shared/editor/editor.less
@@ -3,13 +3,13 @@
 editor {
     .row();
     padding: @gutter 0;
-    line-height: 40px;
+    line-height: 42px;
 
     validation-message, .val-msg {
         position: relative;
         margin-top: -1em;
-        top: 1.4em;
-        line-height: .8;
+        top: 1.2em;
+        line-height: 1;
     }
 
     > .editor-label {
@@ -29,9 +29,7 @@ editor {
     }
 
     > .editor-content {
-        margin-top: -1px;
         position: relative;
-/*        justify-content: center;*/
         line-height: inherit;
     }
 }
